# test-tauri

./: Cargo.toml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
